--- a/css/style.css
+++ b/css/style.css
@@ -496,7 +496,7 @@ mark,
 
 @media screen and (max-width: 800px) {
     .fetr {
-        max-width: 80% !important;
+         max-width: 80% !important; 
         height: auto !important;
         margin: 0 auto
     }
@@ -507,7 +507,7 @@ mark,
     background-color: #fff;
     border: 1px solid #dee2e6;
     border-radius: 0.25rem;
-    max-width: 100%;
+    max-width: 200%;
     height: auto;
 }
 
@@ -582,7 +582,7 @@ pre code {
 
 @media (min-width: 768px) {
     .container {
-        max-width: 720px;
+        max-width: 1000px;
     }
 }
 
@@ -11454,11 +11454,12 @@ h1, h2, h3, h4, h5,
 
 .ftco-navbar-light {
     background: transparent !important;
-    position: absolute;
-    top: -20px;
+    /* position: absolute; */
+    top: -10px;
     right: 0;
     left: 0;
-    z-index: 3;
+    z-index: 5;
+    height: 110px;
 }
 
 @media (max-width: 991.98px) {
@@ -11564,7 +11565,7 @@ h1, h2, h3, h4, h5,
     padding-bottom: .5rem;
     padding-right: 20px;
     padding-left: 20px;
-    margin-top: 4px;
+    margin-top: 40px;
     background: #063976;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -14111,3 +14112,7 @@ textarea.form-control {
         stroke-dashoffset: -136px;
     }
 }
+
+/* slider */
+
+
